...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:visibility="gone" />

                <com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView
                    android:id="@+id/rv_movie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="8dp"
                    app:msrv_gravity="start"
                    app:msrv_interval="1"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:visibility="gone" />

                <com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView
                    android:id="@+id/rv_series"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="8dp"
                    app:msrv_gravity="start"
                    app:msrv_interval="1"
...
